<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <artifactId>finatra-intro</artifactId>
    <groupId>com.axa.dil</groupId>
    <version>1.0-SNAPSHOT</version>
    <repositories>
        <repository>
            <id>scala-tools.org</id>
            <name>Scala-tools Maven2 Repository</name>
            <url>http://scala-tools.org/repo-releases</url>
        </repository>
        <repository>
            <id>twitter</id>
            <url>https://maven.twttr.com/</url>
        </repository>
        <repository>
            <id>akka</id>
            <url>http://repo.akka.io/releases/</url>
        </repository>
        <repository>
            <id>maven</id>
            <url>https://oss.sonatype.org/content/repositories/releases/</url>
        </repository>
        <repository>
            <id>maven-central</id>
            <url>http://central.maven.org/maven2/</url>
        </repository>
    </repositories>
    <pluginRepositories>
        <pluginRepository>
            <id>scala-tools.org</id>
            <name>Scala-tools Maven2 Repository</name>
            <url>http://scala-tools.org/repo-releases</url>
        </pluginRepository>
    </pluginRepositories>
    <properties>
        <finatra.version>2.1.5</finatra.version>
        <finatra.swagger.version>0.5.1</finatra.swagger.version>
        <jackson-databind.version>2.6.5</jackson-databind.version>
        <java.version>1.7</java.version>
        <scalatest.version>2.2.2</scalatest.version>
        <scala.dep.version>2.10</scala.dep.version>
        <scala.version>2.10.5</scala.version>
        <slf4j.version>1.5.8</slf4j.version>
        <twitter.bijection.version>0.9.2</twitter.bijection.version>
        <twitter.util.version>6.33.0</twitter.util.version>
        <typesafe.config.version>1.2.1</typesafe.config.version>
    </properties>
    <dependencyManagement>
        <dependencies>
            <!-- Finatra -->
            <dependency>
                <groupId>com.twitter</groupId>
                <artifactId>util-core_${scala.dep.version}</artifactId>
                <version>${twitter.util.version}</version>
            </dependency>
            <dependency>
                <groupId>com.twitter</groupId>
                <artifactId>bijection-core_${scala.dep.version}</artifactId>
                <version>${twitter.bijection.version}</version>
            </dependency>
            <dependency>
                <groupId>com.twitter</groupId>
                <artifactId>bijection-util_${scala.dep.version}</artifactId>
                <version>${twitter.bijection.version}</version>
            </dependency>
            <dependency>
                <groupId>com.twitter.finatra</groupId>
                <artifactId>finatra-utils_${scala.dep.version}</artifactId>
                <version>${finatra.version}</version>
            </dependency>
            <dependency>
                <groupId>com.twitter.finatra</groupId>
                <artifactId>finatra-http_${scala.dep.version}</artifactId>
                <version>${finatra.version}</version>
            </dependency>
            <dependency>
                <groupId>com.twitter.finatra</groupId>
                <artifactId>finatra-httpclient_${scala.dep.version}</artifactId>
                <version>${finatra.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.xiaodongw</groupId>
                <artifactId>swagger-finatra2_${scala.dep.version}</artifactId>
                <version>${finatra.swagger.version}</version>
            </dependency>
            <!-- CONFIG -->
            <dependency>
                <groupId>com.typesafe</groupId>
                <artifactId>config</artifactId>
                <version>${typesafe.config.version}</version>
            </dependency>

            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>${jackson-databind.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.module</groupId>
                <artifactId>jackson-module-scala_${scala.dep.version}</artifactId>
                <version>${jackson-databind.version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>com.google.guava</groupId>
                        <artifactId>guava</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-annotations</artifactId>
                <version>${jackson-databind.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-core</artifactId>
                <version>${jackson-databind.version}</version>
            </dependency>
            <!-- Tests -->
            <dependency>
                <groupId>org.scalatest</groupId>
                <artifactId>scalatest_${scala.dep.version}</artifactId>
                <version>${scalatest.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>com.google.inject.extensions</groupId>
                <artifactId>guice-testlib</artifactId>
                <scope>test</scope>
                <version>4.0</version>
            </dependency>
            <dependency>
                <groupId>com.twitter.finatra</groupId>
                <artifactId>finatra-http_${scala.dep.version}</artifactId>
                <scope>test</scope>
                <type>test-jar</type>
                <version>${finatra.version}</version>
            </dependency>
            <dependency>
                <groupId>com.twitter.finatra</groupId>
                <artifactId>finatra-jackson_${scala.dep.version}</artifactId>
                <scope>test</scope>
                <type>test-jar</type>
                <version>${finatra.version}</version>
            </dependency>
            <dependency>
                <groupId>com.twitter.inject</groupId>
                <artifactId>inject-core_${scala.dep.version}</artifactId>
                <scope>test</scope>
                <type>test-jar</type>
                <version>${finatra.version}</version>
            </dependency>
            <dependency>
                <groupId>com.twitter.inject</groupId>
                <artifactId>inject-modules_${scala.dep.version}</artifactId>
                <scope>test</scope>
                <type>test-jar</type>
                <version>${finatra.version}</version>
            </dependency>
            <dependency>
                <groupId>com.twitter.inject</groupId>
                <artifactId>inject-app_${scala.dep.version}</artifactId>
                <scope>test</scope>
                <type>test-jar</type>
                <version>${finatra.version}</version>
            </dependency>
            <dependency>
                <groupId>com.twitter.inject</groupId>
                <artifactId>inject-server_${scala.dep.version}</artifactId>
                <scope>test</scope>
                <type>test-jar</type>
                <version>${finatra.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <dependencies>
        <dependency>
            <groupId>com.typesafe</groupId>
            <artifactId>config</artifactId>
        </dependency>
        <dependency>
            <groupId>com.twitter.finatra</groupId>
            <artifactId>finatra-utils_${scala.dep.version}</artifactId>
        </dependency>
        <dependency>
            <groupId>com.twitter.finatra</groupId>
            <artifactId>finatra-http_${scala.dep.version}</artifactId>
        </dependency>
        <dependency>
            <groupId>com.twitter.finatra</groupId>
            <artifactId>finatra-httpclient_${scala.dep.version}</artifactId>
        </dependency>
        <dependency>
            <groupId>com.github.xiaodongw</groupId>
            <artifactId>swagger-finatra2_${scala.dep.version}</artifactId>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.scalatest</groupId>
            <artifactId>scalatest_${scala.dep.version}</artifactId>
            <scope>test</scope>
            <version>2.2.4</version>
        </dependency>
        <dependency>
            <groupId>org.specs2</groupId>
            <artifactId>specs2_${scala.dep.version}</artifactId>
            <scope>test</scope>
            <version>2.3.12</version>
            <exclusions>
                <exclusion>
                    <groupId>org.scala-lang</groupId>
                    <artifactId>scala-compiler</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <scope>test</scope>
            <version>1.10.19</version>
        </dependency>
        <dependency>
            <groupId>com.google.inject.extensions</groupId>
            <artifactId>guice-testlib</artifactId>
            <scope>test</scope>
            <version>4.0</version>
        </dependency>
        <dependency>
            <groupId>com.twitter.finatra</groupId>
            <artifactId>finatra-http_${scala.dep.version}</artifactId>
            <type>test-jar</type>
        </dependency>
        <dependency>
            <groupId>com.twitter.finatra</groupId>
            <artifactId>finatra-jackson_${scala.dep.version}</artifactId>
            <type>test-jar</type>
        </dependency>
        <dependency>
            <groupId>com.twitter.inject</groupId>
            <artifactId>inject-core_${scala.dep.version}</artifactId>
            <type>test-jar</type>
        </dependency>
        <dependency>
            <groupId>com.twitter.inject</groupId>
            <artifactId>inject-modules_${scala.dep.version}</artifactId>
            <type>test-jar</type>
        </dependency>
        <dependency>
            <groupId>com.twitter.inject</groupId>
            <artifactId>inject-app_${scala.dep.version}</artifactId>
            <type>test-jar</type>
        </dependency>
        <dependency>
            <groupId>com.twitter.inject</groupId>
            <artifactId>inject-server_${scala.dep.version}</artifactId>
            <type>test-jar</type>
        </dependency>
    </dependencies>
    <distributionManagement>
        <snapshotRepository>
            <id>nexus</id>
            <url>http://compute1:31298/nexus/content/repositories/snapshots/</url>
            <uniqueVersion>false</uniqueVersion>
        </snapshotRepository>
    </distributionManagement>
    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>build-helper-maven-plugin</artifactId>
                    <version>1.7</version>
                    <executions>
                        <execution>
                            <id>add-source</id>
                            <phase>generate-sources</phase>
                            <goals>
                                <goal>add-source</goal>
                            </goals>
                            <configuration>
                                <sources>
                                    <source>${basedir}/src/main/scala</source>
                                    <source>${basedir}/src/main/java</source>
                                </sources>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>net.alchim31.maven</groupId>
                    <artifactId>scala-maven-plugin</artifactId>
                    <version>3.2.1</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>compile</goal>
                                <goal>testCompile</goal>
                            </goals>
                        </execution>
                    </executions>
                    <configuration>
                        <args>
                            <arg>-target:jvm-${java.version}</arg>
                        </args>
                        <javacArgs>
                            <javacArg>-source</javacArg>
                            <javacArg>${java.version}</javacArg>
                            <javacArg>-target</javacArg>
                            <javacArg>${java.version}</javacArg>
                        </javacArgs>
                        <scalaVersion>${scala.version}</scalaVersion>
                        <scalaCompatVersion>${scala.dep.version}</scalaCompatVersion>
                        <recompileMode>incremental</recompileMode>
                        <ccTestGoals>scalatest:test</ccTestGoals>
                    </configuration>
                </plugin>
                <!-- enable scalatest -->
                <plugin>
                    <groupId>org.scalatest</groupId>
                    <artifactId>scalatest-maven-plugin</artifactId>
                    <version>1.0</version>
                    <configuration>
                        <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
                        <junitxml>.</junitxml>
                        <filereports>WDF TestSuite.txt</filereports>
                        <stdout>D</stdout>
                        <argLine>-Xms512m -XX:PermSize=128m</argLine>
                    </configuration>
                    <executions>
                        <execution>
                            <id>test</id>
                            <goals>
                                <goal>test</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>2.7</version>
                    <configuration>
                        <skipTests>true</skipTests>
                    </configuration>
                </plugin>
                <plugin>
                    <artifactId>maven-shade-plugin</artifactId>
                    <version>1.5</version>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>net.alchim31.maven</groupId>
                <artifactId>scala-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>build-helper-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.scalatest</groupId>
                <artifactId>scalatest-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>2.4.3</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <manifestEntries>
                                        <Main-Class>com.axa.dil.TodoServerMain</Main-Class>
                                    </manifestEntries>
                                </transformer>
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>2.8.1</version>
                <executions>
                    <execution>
                        <id>default-deploy</id>
                        <phase>deploy</phase>
                        <goals>
                            <goal>deploy</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>